# irkki_botti

./: LICENSE  cmake-Modules.tar.bz2  main.cc~
trunk/: CMakeLists.txt
trunk/data/: CMakeLists.txt  telnetin irc logi  toinen loki
trunk/data/share/.svn/: all-wcprops  entries
trunk/doc/: JTTBot_d.odt  ajoesimerkki.txt
trunk/src/: CMakeLists.txt  authority.cc  authority.hh  channel.cc~  channel.hh~  channels.cc  channels.hh  commandHandler.cc  commandHandler.cc~  commandHandler.hh  commandHandler.hh~  config.h.in  komennot.txt  main.cc  main.cc~  parser.cc  parser.cc~  parser.hh  parser.hh~  quotes.cc  quotes.hh
